<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.introActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:elevation="3dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/vegetable" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/introapp"
                android:textSize="31sp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introdes"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/regular"
                android:layout_marginTop="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                tools:ignore="VisualLintLongText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/backgound_btn"
                android:fontFamily="@font/light"
                android:text="@string/btn"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/login_nxt_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intrologin"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                android:layout_marginStart="32dp"
                android:textColor="@color/black"
                android:layout_marginEnd="32dp"
                android:textSize="16sp"
                android:fontFamily="@font/regular"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>